# startup-example

backend/: pyproject.toml
backend/auth/: schema.py
backend/authentication/: admin.py  middleware.py  models.py  mutations.py  schema.py  types.py
backend/authentication/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/graphql_api/: schema.py  urls.py  utils.py  views.py
backend/graphql_api/templates/: graphql_playground.html
backend/users/: models.py  mutations.py  schema.py  types.py
cli/: pyproject.toml
frontend/: package.json  pnpm-lock.yaml  turbo.json
frontend/apps/cloud/: package.json
frontend/apps/cloud/pages/: _app.tsx  _document.tsx  index.tsx
frontend/apps/docs/: package.json
frontend/apps/docs/pages/: index.tsx
frontend/apps/graphql/: graphql.schema.json  next.config.js  package.json  schema.json
frontend/apps/graphql/pages/: _app.tsx  index.tsx
frontend/apps/graphql/styles/: global.css
frontend/apps/web/: package.json
frontend/apps/web/pages/: _app.tsx  index.tsx
