[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dylan Stein <dylan@steins.studio>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
graphene = "^3.1"
python-dotenv = "^0.20.0"
whitenoise = "^6.2.0"
mypy = "^0.961"
django-filter = "^22.1"
graphene-django = {git = "https://github.com/graphql-python/graphene-django"}
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
prospector = "^1.7.7"
ipython = "^8.4.0"
ipdb = "^0.13.9"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
